--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -1,8 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
+h1 {font-size: 1.7em;}
+h2 {font-size: 1.3em;}
+
+
 body {
   margin: 0;
   font-family: 'Roboto';
-  font-size: 18px;
+  font-size: 13px;
   height: 100vh;
 }
 
@@ -13,16 +18,18 @@ body {
 }
 
 .container .start-container {
+  padding: 5px;
   margin: 0 auto;
   text-align: center;
 }
 
 .container .start-container .logo {
-  width: 130px;
-  height: 150px;
+  width: 85;
+  height: 100px;
 }
 
 .container .start-container h1 {
+
   color: #242B67;
   margin: 1em 0;
 }
@@ -33,6 +40,7 @@ body {
 }
 
 .container .bservice-container {
+  padding: 5px;
   background-color: rgba(197, 219, 225, 0.253);
   text-align: center;
 }
@@ -53,6 +61,7 @@ body {
 }
 
 .container .tservice-container {
+  padding: 5px;
   text-align: center;
 }
 
@@ -72,6 +81,7 @@ body {
 }
 
 .container .tplanung-container {
+  padding: 5px;
   text-align: center;
   background-color: rgba(197, 219, 225, 0.253);
 }
@@ -92,6 +102,7 @@ body {
 }
 
 .container .CTA-container {
+  padding: 5px;
   color: #242B67;
   text-align: center;
 }
