--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -7,41 +7,59 @@ h2 {font-size: 1.3em;}
 body {
   margin: 0;
   font-family: 'Roboto';
-  font-size: 13px;
+  font-size: 12px;
   height: 100vh;
 }
 
 .header {
   margin: 0;
-  background-color: rgba(197, 219, 225, 0.253);
-  height: 45px;
+  background-color: rgba(197, 219, 225, 0.25);
+  height: 25px;
 }
 
+
+/* Inhaltsblock 1*/
 .container .start-container {
-  padding: 5px;
   margin: 0 auto;
   text-align: center;
+  padding-bottom: 2.1em;    /* Abstand Inhaltsblock - Button - neuer Inhaltsblock */
 }
 
 .container .start-container .logo {
-  width: 85;
+  padding-top: 10px;
+  width: 85px;
   height: 100px;
 }
 
 .container .start-container h1 {
-
   color: #242B67;
   margin: 1em 0;
 }
 
 .container .start-container p {
+  padding-left: 1em;
+  text-align: left;
   color: #242B67;
   line-height: 1.2rem;
+  padding-bottom: 0.8em;
 }
 
+.container button {
+width: calc(100% - 2em);
+margin: 0;
+background: #742748;
+color: white;
+border-radius: 10px;
+border: none;
+padding: 0.5em;
+font-size: 13px;
+}
+
+
+/* Inhaltsblock 2*/
 .container .bservice-container {
   padding: 5px;
-  background-color: rgba(197, 219, 225, 0.253);
+  background-color: rgba(197, 219, 225, 0.25);
   text-align: center;
 }
 
@@ -60,6 +78,8 @@ body {
   line-height: 1.2rem;
 }
 
+
+/* Inhaltsblock 3*/
 .container .tservice-container {
   padding: 5px;
   text-align: center;
@@ -80,10 +100,12 @@ body {
   line-height: 1.2rem;
 }
 
+
+/* Inhaltsblock 4*/
 .container .tplanung-container {
   padding: 5px;
   text-align: center;
-  background-color: rgba(197, 219, 225, 0.253);
+  background-color: rgba(197, 219, 225, 0.25);
 }
 
 .container .tplanung-container .tplanungBild {
@@ -101,9 +123,14 @@ body {
   line-height: 1.2rem;
 }
 
+
+/* Inhaltsblock 5*/
 .container .CTA-container {
   padding: 5px;
   color: #242B67;
   text-align: center;
 }
+
+
+@media(min-width: )
 /*# sourceMappingURL=main.css.map */
