--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -10,6 +10,53 @@ body {
   height: 100vh;
 }
 
+.topnav{
+  overflow: hidden;
+  background-color: #f2f7f9;
+}
+
+.topnav a{
+  color: #242B67;
+  float: left;
+  display: block;
+  font-size: 1em;
+  padding: 0.5em 0em 0.5em 1.3em;
+}
+
+.topnav a:hover{
+  background-color: #242B67;
+  color: #f2f7f9;
+}
+
+.topnav .LeistungenNav {
+  display: none;
+}
+
+.topnav .PreiseNav {
+  display: none;
+}
+.topnav .KontaktNav {
+  display: none;
+}
+
+.topnav .icon {
+  float: right;
+  padding-right: 1em;
+}
+
+.topnav.responsive {position: relative;}
+
+.topnav.responsive .icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: left;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -19,8 +66,6 @@ header {
 .sticky {
   position: fixed;
   width: 100%;
-  ´
-  
 }
 
 .phoneIcon{
@@ -182,7 +227,4 @@ font-size: 13px;
 
 
 }
-
-
-@media(min-width: )
 /*# sourceMappingURL=main.css.map */
