--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -20,78 +20,50 @@ list-style: none;
 padding-left: 1em;
 }
 
-nav li {
+nav a {
   float:left;
   color: #242B67;
+  padding: 0.3em;
 }
 
-nav li.telefonnummer{
-  font-size: 1.2em;
+nav a.telefonnummer{
+  font-weight: bold;
+  font-size: 1.5em;
 }
 
-nav li .LeistungenNav{
+nav a.LeistungenNav{
   display: none;
 }
-nav li .PreiseNav{
+nav a.PreiseNav{
   display: none;
 }
-nav li .KontaktNav{
+nav a.KontaktNav{
   display: none;
 }
-nav .icon {
+nav a.icon {
   float: right;
   color: #242B67;
-  padding-right: 1em;
-}
-
-nav li:hover{
-  background-color: #242B67;
-  color: #f2f7f9;
-}
-
-/*
-.topnav a{
-  color: #242B67;
-  float: left;
-  display: block;
-  font-size: 1em;
-  padding: 0.5em 0em 0.5em 1.3em;
-}
-
-.topnav a:hover{
-  background-color: #242B67;
-  color: #f2f7f9;
-}
-
-.topnav .LeistungenNav {
-  display: none;
-}
-
-.topnav .PreiseNav {
-  display: none;
-}
-.topnav .KontaktNav {
-  display: none;
-}
-*/
-
-
-.topnav a.icon {
-  float: right;
   display: block;
   padding-right: 1em;
+
+}
+
+nav a:hover{
+  background-color: #242B67;
+  color: #f2f7f9;
 }
 
 .topnav.responsive .icon {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 1em;
+  top: 1em;
 }
 .topnav.responsive a {
   float: none;
   display: block;
   text-align: left;
 }
+
 
 /*
 header {
@@ -152,7 +124,7 @@ margin: 0;
 background: #742748;
 color: white;
 border-radius: 10px;
-border: none;
+border: sdf;
 padding: 0.5em;
 font-size: 13px;
 }
