--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -10,11 +10,17 @@ body {
   height: 100vh;
 }
 
-nav{
+nav {
   overflow: hidden;
   background-color: #f2f7f9;
+  display: grid;
+  grid-template-columns: 10% auto;
 }
 
+nav .bild{
+  list-style: none;
+  padding: 1.3em;
+}
 nav ul {
 list-style: none;
 padding-left: 1em;
@@ -24,6 +30,10 @@ nav a {
   float:left;
   color: #242B67;
   padding: 0.3em;
+}
+nav img{
+  width: 10px;
+  height: 10px;
 }
 
 nav a.telefonnummer{
@@ -62,6 +72,7 @@ nav a:hover{
   float: none;
   display: block;
   text-align: left;
+  font-size: 1em;
 }
 
 
@@ -124,7 +135,7 @@ margin: 0;
 background: #742748;
 color: white;
 border-radius: 10px;
-border: sdf;
+border: none;
 padding: 0.5em;
 font-size: 13px;
 }
