--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -14,12 +14,12 @@ nav {
   overflow: hidden;
   background-color: #f2f7f9;
   display: grid;
-  grid-template-columns: 10% auto;
+  grid-template-columns: 15% auto;
 }
 
 nav .bild{
   list-style: none;
-  padding: 1.3em;
+  padding: 1em;
 }
 nav ul {
 list-style: none;
@@ -32,13 +32,12 @@ nav a {
   padding: 0.3em;
 }
 nav img{
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 22px;
 }
-
-nav a.telefonnummer{
-  font-weight: bold;
-  font-size: 1.5em;
+ /* Telefonnummer*/
+nav.sticky .telefonnummer a{
+  font-size: 1.2em;
 }
 
 nav a.LeistungenNav{
@@ -50,6 +49,7 @@ nav a.PreiseNav{
 nav a.KontaktNav{
   display: none;
 }
+/* ICON - Menu */
 nav a.icon {
   float: right;
   color: #242B67;
@@ -57,6 +57,12 @@ nav a.icon {
   padding-right: 1em;
 
 }
+
+nav.sticky a.icon{
+  display: none;
+}
+
+
 
 nav a:hover{
   background-color: #242B67;
@@ -87,18 +93,6 @@ header {
 .sticky {
   position: fixed;
   width: 100%;
-}
-
-.phoneIcon{
-  width: 1.2em;
-  height: 1.2em;
-  padding: 1em;
-}
-
-.menuIcon{
-  width: 2em;
-  height: 1.2em;
-  padding: 1em;
 }
 
 /* Inhaltsblock 1*/
