--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -1,18 +1,144 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
-
-h2 {font-size: 1.3em;}
-
-
-body {
+/************************ Allgemeine Einstellungen***********************+*/
+html, body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  text-align: center;
   font-family: 'Roboto';
-  font-size: 12px;
-  height: 100vh;
 }
+section { 
+  min-height: 100%;
+}
+
+section img {
+  margin-top: 93px;
+  width: 25%;
+}
+
+section h2{
+  margin-top: 53px auto 0 auto;
+}
+
+hr{
+  width: 30px ;
+  height: 3px;
+  background: #242B67;
+  border: 0;
+  border-radius: 20px;
+  margin: 0 auto 40px auto;
+  
+}
+a {text-decoration: none;}
+li {list-style-type: none;}
+
+h1, h2 {
+  text-transform: uppercase;
+  color: #242B67;
+  font-size: 1.9em;
+  font-weight: bold;
+}
+
+p {
+font-size: 17px;
+}
+#logo {transition: all 300ms;}
+
+/************************ Header ***********************+*/
+
+
+header {
+  width: 100%;
+  height: 64px;
+  background-color: #f2f7f9;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+#logo {
+  width: 35px;
+  float: left;
+  margin: 14px 0 0 20px;
+}
+
+#logo:hover {opacity: 0.5; }
+
+#logo img {
+  width: 100%;
+}
+
+header p {
+  float: left;
+  margin: 21px 0 0 15px;
+  font-size: 1em;
+  font-weight: bold;
+  color: #242B67;
+}
+
+header nav {
+float: right;
+margin: 5px 20px 0 0;
+}
+
+header nav ul li {
+  float: left;
+  margin-left: 20px;
+}
+
+
+/************************ Home ***********************+*/
+
+#home {
+background: white
+}
+
+#home h1{
+  margin-top: 53px;
+}
+
+#home p{
+  margin: 18px 100px 0 100px;
+}
+
+/************************ büroservice/terminplanung/telefonservice ***********************+*/
+
+
+#büroservice {
+  background: #f2f7f9;
+}
+#terminplanung{
+  background: #f2f7f9;
+}
+
+
+/****** CTA *****/
+
+#cta h2{
+  margin-top: 93px;
+}
+
+#cta button {
+  margin: 25px auto 0 auto;
+  background: #742748;
+  color: white;
+  border: none; 
+  border-radius: 20px;
+  width: 280px;
+  height: 65px;
+  font-size: 1.4em;
+}
+
+#cta button:hover{
+  opacity: 0.8;
+}
+/*
 
 nav {
   overflow: hidden;
-  background-color: #f2f7f9;
+  background-color: #f68888;
   display: grid;
   grid-template-columns: 15% auto;
 }
@@ -35,10 +161,14 @@ nav img{
   width: 20px;
   height: 22px;
 }
- /* Telefonnummer*/
+
+Telefonnummer
 nav.sticky .telefonnummer a{
   font-size: 1.2em;
 }
+*/
+
+/*
 
 nav a.LeistungenNav{
   display: none;
@@ -49,7 +179,12 @@ nav a.PreiseNav{
 nav a.KontaktNav{
   display: none;
 }
+*/
+
 /* ICON - Menu */
+
+
+/*
 nav a.icon {
   float: right;
   color: #242B67;
@@ -81,26 +216,21 @@ nav a:hover{
   font-size: 1em;
 }
 
-
-/*
-header {
-  display: flex;
-  justify-content: space-between;
-  background-color: #f2f7f9; 
-  color: #242B67;
-}*/
-
 .sticky {
   position: fixed;
   width: 100%;
 }
+*/
+
 
 /* Inhaltsblock 1*/
+
+/*
 .container .start-container {
   margin: 0 auto;
   text-align: center;
   padding-top: 0em;
-  padding-bottom: 2.1em;    /* Abstand Inhaltsblock - Button - neuer Inhaltsblock */
+  padding-bottom: 2.1em;    
 }
 
 .container .start-container .logo {
@@ -135,7 +265,7 @@ font-size: 13px;
 }
 
 
-/* Inhaltsblock 2*/
+
 .container .bservice-container {
   padding: 0.3em;
   padding-top: 2.1em;
@@ -170,7 +300,7 @@ font-size: 13px;
 }
 
 
-/* Inhaltsblock 3*/
+
 .container .tservice-container {
   padding: 0.3em;
   padding-top: 2.1em;
@@ -197,7 +327,7 @@ font-size: 13px;
 }
 
 
-/* Inhaltsblock 4*/
+
 .container .tplanung-container {
   padding: 0.3em;
   padding-top: 2.1em;
@@ -224,7 +354,7 @@ font-size: 13px;
 }
 
 
-/* Inhaltsblock 5*/
+
 .container .CTA-container {
   padding: 0.3em;
   padding-top: 2.1em;
@@ -238,8 +368,10 @@ font-size: 13px;
   display: flex; 
   justify-content: space-between;
   color: #242B67;
-  padding: 0em 4em 0em 4em;
+  padding: 1em 4em 1em 4em;
+
 
 
 }
+*/
 /*# sourceMappingURL=main.css.map */
