--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -128,7 +128,7 @@ background: white
   margin-top: 93px;
 }
 
-#cta button {
+button {
   margin: 25px auto 0 auto;
   background: #742748;
   color: white;
@@ -139,8 +139,31 @@ background: white
   font-size: 1.4em;
 }
 
-#cta button:hover{
+button:hover{
   opacity: 0.8;
+}
+
+form {
+  margin-top: 93px;
+}
+
+form input, textarea {
+  font-size: 15px;
+  margin-bottom: 10px;
+  border-radius: 2px;
+  border: 1px solid;
+  border-color: #242B67;
+}
+
+form input {
+  width: 552px;
+  height: 30px;
+}
+
+form textarea{
+  width: 550px;
+  height: 200px;
+  resize: none;
 }
 
 /******* Footer *******/
