--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -22,11 +22,11 @@ section h2{
 
 hr{
   width: 30px ;
-  height: 3px;
+  height: 1px;
   background: #242B67;
   border: 0;
-  border-radius: 20px;
-  margin: 0 auto 40px auto;
+  border-radius: 0px;
+  margin: 0 auto 0 auto;
   
 }
 a {text-decoration: none;}
@@ -39,8 +39,12 @@ h1, h2 {
   font-weight: bold;
 }
 
+h1 {
+  font-size: 84px;
+}
+
 p {
-font-size: 17px;
+font-size: 40px;
 }
 #logo {transition: all 300ms;}
 
@@ -49,19 +53,13 @@ font-size: 17px;
 
 header {
   width: 100%;
-  height: 64px;
+  height: 120px;
   background-color: #f2f7f9;
   position: fixed;
   top: 0;
   left: 0;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   z-index: 1;
-}
-
-#logo {
-  width: 35px;
-  float: left;
-  margin: 14px 0 0 20px;
 }
 
 #logo:hover {opacity: 0.5; }
@@ -72,21 +70,24 @@ header {
 
 header p {
   float: left;
-  margin: 21px 0 0 15px;
-  font-size: 1em;
+  margin: 38px 0 0 192px;
   font-weight: bold;
   color: #242B67;
 }
 
 header nav {
 float: right;
-margin: 5px 20px 0 0;
+margin: 38px 192px 0 0;
+}
+
+header nav ul {
+  margin: 0;
 }
 
 header nav ul li {
   float: left;
-  margin-left: 20px;
-  font-size: 19px;
+  margin-left: 93px;
+  font-size: 40px;
 }
 
 
@@ -97,22 +98,31 @@ background: white
 }
 
 #home h1{
-  margin-top: 53px;
+  margin: 397px auto auto 192px;
+  width: 56%;
+  text-align: left;
 }
 
 #home p{
-  margin: 18px 100px 0 100px;
+  color: #242B67;
+  margin: 130px auto 0 192px;
+  text-align: left;
+  width: 55%;
+  line-height: 1.5em;
 }
 
+.Pfad_2{
+  margin: 0;
+  overflow: visible;
+  position: absolute;
+	width: 100%;
+	left: 0px;
+	top: 190px;
+}
 /************************ büroservice/terminplanung/telefonservice ***********************+*/
 
 
-#büroservice {
-  background: #f2f7f9;
-}
-#terminplanung{
-  background: #f2f7f9;
-}
+
 #telefonservice {
   margin-top: -25px;
 }
