--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -13,7 +13,6 @@ section {
 
 section img {
   margin-top: 93px;
-  width: 25%;
 }
 
 section h2{
@@ -107,21 +106,46 @@ background: white
   color: #242B67;
   margin: 130px auto 0 192px;
   text-align: left;
-  width: 55%;
+  width: 50%;
   line-height: 1.5em;
 }
 
 .Pfad_2{
-  margin: 0;
-  overflow: visible;
+  margin: 0 192px 0 192px;
+  overflow: hidden;
   position: absolute;
-	width: 100%;
 	left: 0px;
-	top: 190px;
+  top: 190px;
+  right: 0px;
 }
+
+
+
 /************************ büroservice/terminplanung/telefonservice ***********************+*/
+#leistungen{
+  margin: 0px 192px 0px 192px;
+  max-width: 100%;
+}
+#leistungen div{
+  width: 33%;
+  float: left;
+}
+#leistungen img{
+  width: 90%;
+}
+
+#leistungen p {
+  color: #242B67;
+  width: 90%;
+  text-align: left;
+  margin-left: 45px;
+  margin-top: -50px;
+  font-size:2.1em;
+  line-height: 1.5em;
+}
 
 
+/************************ büroservice/terminplanung/telefonservice ***********************+*/
 
 #telefonservice {
   margin-top: -25px;
